kompose_projects/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/DirectivesParser.java
// $ANTLR 3.1.3 Mar 17, 2009 19:23:44 /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g 2010-06-24 12:03:26

package org.kermeta.kompose.core.parser;

import kompose.*;
import kompose.impl.KomposePackageImpl;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

public class DirectivesParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "STRING_LITERAL", "UNION", "INTER", "LCURLY", "RCURLY", "CREATE", "ID", "AS", "DOLLAR", "MERGE", "LP", "COMMA", "RP", "DESTROY", "DOT", "CONCAT", "EQUALS", "PLUS", "MINUS", "INT_LITERAL", "TRUE", "FALSE", "COL_COL", "PRE", "POST", "ESC", "DIGIT", "WS", "SingleLineComment", "MultiLineComment", "'EXT'", "'MODE'", "'PM'", "'AM'", "'CM'", "'PMPre'", "'AMPre'", "'Post'"
    };
    public static final int DESTROY=17;
    public static final int DOLLAR=12;
    public static final int T__40=40;
    public static final int INT_LITERAL=23;
    public static final int T__41=41;
    public static final int SingleLineComment=32;
    public static final int CONCAT=19;
    public static final int RP=16;
    public static final int ESC=29;
    public static final int MERGE=13;
    public static final int LP=14;
    public static final int COL_COL=26;
    public static final int INTER=6;
    public static final int LCURLY=7;
    public static final int PRE=27;
    public static final int EQUALS=20;
    public static final int MINUS=22;
    public static final int ID=10;
    public static final int EOF=-1;
    public static final int TRUE=24;
    public static final int UNION=5;
    public static final int AS=11;
    public static final int CREATE=9;
    public static final int WS=31;
    public static final int STRING_LITERAL=4;
    public static final int T__34=34;
    public static final int T__35=35;
    public static final int T__36=36;
    public static final int T__37=37;
    public static final int COMMA=15;
    public static final int T__38=38;
    public static final int T__39=39;
    public static final int RCURLY=8;
    public static final int POST=28;
    public static final int PLUS=21;
    public static final int DIGIT=30;
    public static final int DOT=18;
    public static final int FALSE=25;
    public static final int MultiLineComment=33;

    // delegates
    // delegators


        public DirectivesParser(TokenStream input) {
            this(input, new RecognizerSharedState());
        }
        public DirectivesParser(TokenStream input, RecognizerSharedState state) {
            super(input, state);
             
        }
        

    public String[] getTokenNames() { return DirectivesParser.tokenNames; }
    public String getGrammarFileName() { return "/home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g"; }


      private static KomposeFactory factory = KomposePackageImpl.init().getKomposeFactory();
      
      public static void main(String[] args) throws Exception {
        DirectivesLexer lexer = new DirectivesLexer(new ANTLRFileStream("/home/mclavreu/Desktop/OpenEmbeDD-1.3-antlr2/workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/kompose.kompt"));
        CommonTokenStream tokens = new CommonTokenStream(lexer);
        DirectivesParser parser = new DirectivesParser(tokens);
        try {
          parser.dirUnit();
        } catch (RecognitionException e) {
          // TODO Auto-generated catch block
          e.printStackTrace();
        }
      }
      public ArrayList<String> errors = new ArrayList<String>();
      public ArrayList<String> warnings = new ArrayList<String>();
      
      public boolean hasErrors() {
        return !errors.isEmpty(); 
      }
      
      public void reportError(RecognitionException ex) {
        super.reportError(ex);
        errors.add(ex.toString());
      }



    // $ANTLR start "dirUnit"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:43:1: dirUnit returns [Composer c = factory.createComposer();] : 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY ;
    public final Composer dirUnit() throws RecognitionException {
        Composer c =  factory.createComposer();;

        Token ext=null;
        Token pm=null;
        Token am=null;
        Token cm=null;
        ArrayList<ElementDirective> pmpre = null;

        ArrayList<ElementDirective> ampre = null;

        ArrayList<ElementDirective> post = null;


        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:53:3: ( 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:54:3: 'EXT' ext= STRING_LITERAL ( 'MODE' ( UNION | INTER ) )? 'PM' pm= STRING_LITERAL 'AM' am= STRING_LITERAL 'CM' cm= STRING_LITERAL 'PMPre' LCURLY pmpre= directives RCURLY 'AMPre' LCURLY ampre= directives RCURLY 'Post' LCURLY post= directives RCURLY
            {
            match(input,34,FOLLOW_34_in_dirUnit63); 
            ext=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_dirUnit67); 
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:55:3: ( 'MODE' ( UNION | INTER ) )?
            int alt2=2;
            int LA2_0 = input.LA(1);

            if ( (LA2_0==35) ) {
                alt2=1;
            }
            switch (alt2) {
                case 1 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:55:4: 'MODE' ( UNION | INTER )
                    {
                    match(input,35,FOLLOW_35_in_dirUnit72); 
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:55:11: ( UNION | INTER )
                    int alt1=2;
                    int LA1_0 = input.LA(1);

                    if ( (LA1_0==UNION) ) {
                        alt1=1;
                    }
                    else if ( (LA1_0==INTER) ) {
                        alt1=2;
                    }
                    else {
                        NoViableAltException nvae =
                            new NoViableAltException("", 1, 0, input);

                        throw nvae;
                    }
                    switch (alt1) {
                        case 1 :
                            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:55:12: UNION
                            {
                            match(input,UNION,FOLLOW_UNION_in_dirUnit75); 
                            c.setMode(Modes.UNION);

                            }
                            break;
                        case 2 :
                            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:55:46: INTER
                            {
                            match(input,INTER,FOLLOW_INTER_in_dirUnit81); 
                            c.setMode(Modes.INTERSECTION);

                            }
                            break;

                    }


                    }
                    break;

            }

            match(input,36,FOLLOW_36_in_dirUnit90); 
            pm=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_dirUnit94); 
            match(input,37,FOLLOW_37_in_dirUnit98); 
            am=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_dirUnit102); 
            match(input,38,FOLLOW_38_in_dirUnit106); 
            cm=(Token)match(input,STRING_LITERAL,FOLLOW_STRING_LITERAL_in_dirUnit110); 
            match(input,39,FOLLOW_39_in_dirUnit117); 
            match(input,LCURLY,FOLLOW_LCURLY_in_dirUnit119); 
            pushFollow(FOLLOW_directives_in_dirUnit123);
            pmpre=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_dirUnit125); 
            match(input,40,FOLLOW_40_in_dirUnit129); 
            match(input,LCURLY,FOLLOW_LCURLY_in_dirUnit131); 
            pushFollow(FOLLOW_directives_in_dirUnit135);
            ampre=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_dirUnit137); 
            match(input,41,FOLLOW_41_in_dirUnit142); 
            match(input,LCURLY,FOLLOW_LCURLY_in_dirUnit144); 
            pushFollow(FOLLOW_directives_in_dirUnit148);
            post=directives();

            state._fsp--;

            match(input,RCURLY,FOLLOW_RCURLY_in_dirUnit150); 

            }


                c.setMetamodelName((ext!=null?ext.getText():null).substring(1, (ext!=null?ext.getText():null).length()-1));
                c.setAspectModelURI((am!=null?am.getText():null).substring(1, (am!=null?am.getText():null).length()-1));
                c.setPrimaryModelURI((pm!=null?pm.getText():null).substring(1, (pm!=null?pm.getText():null).length()-1));
                c.setComposedModelURI((cm!=null?cm.getText():null).substring(1, (cm!=null?cm.getText():null).length()-1));
                c.getPredirectivesPM().addAll(pmpre);
                c.getPredirectivesAM().addAll(ampre);
                c.getPostdirectives().addAll(post);
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "dirUnit"


    // $ANTLR start "directives"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:66:1: directives returns [ArrayList<ElementDirective> lst = new ArrayList<ElementDirective>()] : (d= directive )* ;
    public final ArrayList<ElementDirective> directives() throws RecognitionException {
        ArrayList<ElementDirective> lst =  new ArrayList<ElementDirective>();

        ElementDirective d = null;


        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:66:89: ( (d= directive )* )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:67:3: (d= directive )*
            {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:67:3: (d= directive )*
            loop3:
            do {
                int alt3=2;
                alt3 = dfa3.predict(input);
                switch (alt3) {
            	case 1 :
            	    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:67:4: d= directive
            	    {
            	    pushFollow(FOLLOW_directive_in_directives167);
            	    d=directive();

            	    state._fsp--;

            	    lst.add(d);

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return lst;
    }
    // $ANTLR end "directives"


    // $ANTLR start "directive"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:70:1: directive returns [ElementDirective c] : ( destroyD | propertyD | stringD | createD | mergeD ) ;
    public final ElementDirective directive() throws RecognitionException {
        ElementDirective c = null;

        Destroy destroyD1 = null;

        ElementDirective propertyD2 = null;

        ElementDirective stringD3 = null;

        Create createD4 = null;

        Merge mergeD5 = null;


        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:70:40: ( ( destroyD | propertyD | stringD | createD | mergeD ) )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:3: ( destroyD | propertyD | stringD | createD | mergeD )
            {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:3: ( destroyD | propertyD | stringD | createD | mergeD )
            int alt4=5;
            alt4 = dfa4.predict(input);
            switch (alt4) {
                case 1 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:4: destroyD
                    {
                    pushFollow(FOLLOW_destroyD_in_directive187);
                    destroyD1=destroyD();

                    state._fsp--;

                    c =destroyD1;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:32: propertyD
                    {
                    pushFollow(FOLLOW_propertyD_in_directive192);
                    propertyD2=propertyD();

                    state._fsp--;

                    c =propertyD2;

                    }
                    break;
                case 3 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:63: stringD
                    {
                    pushFollow(FOLLOW_stringD_in_directive198);
                    stringD3=stringD();

                    state._fsp--;

                    c =stringD3;

                    }
                    break;
                case 4 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:90: createD
                    {
                    pushFollow(FOLLOW_createD_in_directive204);
                    createD4=createD();

                    state._fsp--;

                    c =createD4;

                    }
                    break;
                case 5 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:71:116: mergeD
                    {
                    pushFollow(FOLLOW_mergeD_in_directive209);
                    mergeD5=mergeD();

                    state._fsp--;

                    c =mergeD5;

                    }
                    break;

            }


            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "directive"


    // $ANTLR start "createD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:74:1: createD returns [Create d = factory.createCreate()] : CREATE id= ID AS DOLLAR var= ID ;
    public final Create createD() throws RecognitionException {
        Create d =  factory.createCreate();

        Token id=null;
        Token var=null;


            System.out.println("CREATE "+(id!=null?id.getText():null)+" AS $"+(var!=null?var.getText():null));
          
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:82:3: ( CREATE id= ID AS DOLLAR var= ID )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:83:3: CREATE id= ID AS DOLLAR var= ID
            {
            match(input,CREATE,FOLLOW_CREATE_in_createD241); 
            id=(Token)match(input,ID,FOLLOW_ID_in_createD245); 
            match(input,AS,FOLLOW_AS_in_createD247); 
            match(input,DOLLAR,FOLLOW_DOLLAR_in_createD249); 
            var=(Token)match(input,ID,FOLLOW_ID_in_createD253); 

            }


                d.setClassName((id!=null?id.getText():null));
                d.setIdentifier((var!=null?var.getText():null));
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "createD"


    // $ANTLR start "mergeD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:86:1: mergeD returns [Merge d = factory.createMerge()] : MERGE LP refL= nameRef COMMA refR= nameRef RP ;
    public final Merge mergeD() throws RecognitionException {
        Merge d =  factory.createMerge();

        NameRef refL = null;

        NameRef refR = null;



            System.out.println("MERGED ");
          
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:93:3: ( MERGE LP refL= nameRef COMMA refR= nameRef RP )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:94:3: MERGE LP refL= nameRef COMMA refR= nameRef RP
            {
            match(input,MERGE,FOLLOW_MERGE_in_mergeD282); 
            match(input,LP,FOLLOW_LP_in_mergeD284); 
            pushFollow(FOLLOW_nameRef_in_mergeD288);
            refL=nameRef();

            state._fsp--;

            d.setLeft(refL);
            match(input,COMMA,FOLLOW_COMMA_in_mergeD292); 
            pushFollow(FOLLOW_nameRef_in_mergeD296);
            refR=nameRef();

            state._fsp--;

            d.setRight(refR);
            match(input,RP,FOLLOW_RP_in_mergeD300); 

            }


                System.out.println("MERGE ");
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "mergeD"


    // $ANTLR start "destroyD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:97:1: destroyD returns [Destroy d = factory.createDestroy()] : DESTROY ref= nameRef ;
    public final Destroy destroyD() throws RecognitionException {
        Destroy d =  factory.createDestroy();

        NameRef ref = null;



            System.out.println("DESTROYD ");
          
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:104:3: ( DESTROY ref= nameRef )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:105:3: DESTROY ref= nameRef
            {
            match(input,DESTROY,FOLLOW_DESTROY_in_destroyD328); 
            pushFollow(FOLLOW_nameRef_in_destroyD332);
            ref=nameRef();

            state._fsp--;

            d.setValue(ref);

            }


                System.out.println("DESTROY "+ref.getQname());
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return d;
    }
    // $ANTLR end "destroyD"


    // $ANTLR start "propertyD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:107:1: propertyD returns [ElementDirective c = null] : ref= refObj DOT prop= ID ( changeD[$prop.text, ref] | concatD[$prop.text, ref] ) ;
    public final ElementDirective propertyD() throws RecognitionException {
        ElementDirective c =  null;

        Token prop=null;
        ElementRef ref = null;

        Change changeD6 = null;

        Concat concatD7 = null;



            System.out.println("PROPERTYD ");
          
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:114:3: (ref= refObj DOT prop= ID ( changeD[$prop.text, ref] | concatD[$prop.text, ref] ) )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:115:3: ref= refObj DOT prop= ID ( changeD[$prop.text, ref] | concatD[$prop.text, ref] )
            {
            pushFollow(FOLLOW_refObj_in_propertyD364);
            ref=refObj();

            state._fsp--;

            match(input,DOT,FOLLOW_DOT_in_propertyD366); 
            prop=(Token)match(input,ID,FOLLOW_ID_in_propertyD370); 
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:115:26: ( changeD[$prop.text, ref] | concatD[$prop.text, ref] )
            int alt5=2;
            int LA5_0 = input.LA(1);

            if ( ((LA5_0>=EQUALS && LA5_0<=MINUS)) ) {
                alt5=1;
            }
            else if ( (LA5_0==COMMA||LA5_0==CONCAT) ) {
                alt5=2;
            }
            else {
                NoViableAltException nvae =
                    new NoViableAltException("", 5, 0, input);

                throw nvae;
            }
            switch (alt5) {
                case 1 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:115:27: changeD[$prop.text, ref]
                    {
                    pushFollow(FOLLOW_changeD_in_propertyD373);
                    changeD6=changeD((prop!=null?prop.getText():null), ref);

                    state._fsp--;

                    c =changeD6;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:115:70: concatD[$prop.text, ref]
                    {
                    pushFollow(FOLLOW_concatD_in_propertyD379);
                    concatD7=concatD((prop!=null?prop.getText():null), ref);

                    state._fsp--;

                    c =concatD7;

                    }
                    break;

            }


            }


                System.out.println(" PROP "+ref.toString());
              
        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "propertyD"


    // $ANTLR start "stringD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:118:1: stringD returns [ElementDirective c = null] : ref= stringL concatD[$ref.text,null] ;
    public final ElementDirective stringD() throws RecognitionException {
        ElementDirective c =  null;

        DirectivesParser.stringL_return ref = null;

        Concat concatD8 = null;



        	  System.out.println("STRINGD "+(ref!=null?input.toString(ref.start,ref.stop):null));
        	
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:122:3: (ref= stringL concatD[$ref.text,null] )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:123:3: ref= stringL concatD[$ref.text,null]
            {
            pushFollow(FOLLOW_stringL_in_stringD406);
            ref=stringL();

            state._fsp--;

            pushFollow(FOLLOW_concatD_in_stringD408);
            concatD8=concatD((ref!=null?input.toString(ref.start,ref.stop):null), null);

            state._fsp--;

            c =concatD8;

            }

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
        }
        finally {
        }
        return c;
    }
    // $ANTLR end "stringD"


    // $ANTLR start "changeD"
    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:126:1: changeD[String prop, ElementRef ref] returns [Change d = null] : ( setD | addD | removeD ) ;
    public final Change changeD(String prop, ElementRef ref) throws RecognitionException {
        Change d =  null;

        Set setD9 = null;

        Add addD10 = null;

        Remove removeD11 = null;



        	  System.out.println("CHANGED "+prop);
        	
        try {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:134:3: ( ( setD | addD | removeD ) )
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:135:3: ( setD | addD | removeD )
            {
            // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:135:3: ( setD | addD | removeD )
            int alt6=3;
            switch ( input.LA(1) ) {
            case EQUALS:
                {
                alt6=1;
                }
                break;
            case PLUS:
                {
                alt6=2;
                }
                break;
            case MINUS:
                {
                alt6=3;
                }
                break;
            default:
                NoViableAltException nvae =
                    new NoViableAltException("", 6, 0, input);

                throw nvae;
            }

            switch (alt6) {
                case 1 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:135:4: setD
                    {
                    pushFollow(FOLLOW_setD_in_changeD441);
                    setD9=setD();

                    state._fsp--;

                    d =setD9;

                    }
                    break;
                case 2 :
                    // /home/mclavreu/main_workspace/org.kermeta.kompose.core.parser/src/org/kermeta/kompose/core/parser/Directives.g:135:25: addD
                    {
                    pushFollow(FOLLOW_addD_in_changeD447);
                    addD10=addD();

                    state._fsp--;

                    d =addD10;
